[tool.poetry]
name = "rehook_python"
version = "0.1.0"
description = ""
authors = ["Tom Punihaole <tom.punihaole@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
